<?xml version="1.0"?>
<package format="2">
  <name>wittenstain_ft_sensor</name>
  <version>0.0.0</version>
  <description>The wittenstain_ft_sensor package</description>

  <author email="beltran@hlab.sys.es.osaka-u.ac.jp">Cristian Beltran</author>
  <maintainer email="beltran@hlab.sys.es.osaka-u.ac.jp">Cristian Beltran</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python-serial</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  
</package>
